changed the new message icon, the folder->Update title to folder->Get
New Messages, and put a new Get New Messages icon on the FolderDisplay.

some properties of the UserProfile, such as the selected sent folder and
the selected mail server, used to require a restart to change them.  they
now change without a restart.

changed the selection of things like the sent folder, trash folder, etc.,
to use only already subscribed folders.

made it so doing an open action on the folder node actually makes sure
that the Folder is in an OPEN state.

changed the display of newly received messages.  now if you try to display
messages before they're loaded, instead of loading the messages on the
AWT thread, you just show 'loading' for each frame.  when the table info
is loaded, the FolderDisplay gets updated with the new values.

made it so that the ReadMessageDisplay only populates one JEditorPane,
instead of 2 like it used to.

made it so that the main Pooka window shouldn't change size between 
starts as often.

changed the window place while in desktop pane mode.  new windows are now
not always places in the top left corner of the desktop.

020304 release
--------------

fixed a bug in the VariableBundle which made it so backslashes weren't
handled properly.  this caused file selection under windows to fail 
horribly.

added support for dynamically switching between LookAndFeels.

clicking Ok on a property editor now saves the current properties to disk.
this means that you no longer have to exit out of pooka cleanly in order to
have your changes save.

fixed an ArrayIndexOutOfBoundsException if you right-clicked on an entry
in the AttachmentPane that wasn't selected.

fixed a bug where the ExternalLauncher wasn't executing correctly if there
was no wrapper specified.  this resulted in the inability to open attachments
on windows.

fixed a bug where the StoreNode and FolderNode were each updating their