@@ -68,7 +68,13 @@ public class ConnectionMonitor extends JPanel implements NetworkConnectionListen
     statusPanel.addMouseListener(new MouseAdapter() {
 	
 	public void mousePressed(MouseEvent e) {
-	  if (SwingUtilities.isRightMouseButton(e)) {
+	  if (e.isPopupTrigger()) {
+	    showPopupMenu(e);
+	  }
+	}
+
+	public void mouseReleased(MouseEvent e) {
+	  if (e.isPopupTrigger()) {
 	    showPopupMenu(e);
 	  }
 	}
