@@ -70,7 +70,13 @@ public class NewMessageDisplayPanel extends MessageDisplayPanel implements ItemL
     editorPane.addMouseListener(new MouseAdapter() {
 	
 	public void mousePressed(MouseEvent e) {
-	  if (SwingUtilities.isRightMouseButton(e)) {
+	  if (e.isPopupTrigger()) {
+	    showPopupMenu(editorPane, e);
+	  }
+	}
+
+	public void mouseReleased(MouseEvent e) {
+	  if (e.isPopupTrigger()) {
 	    showPopupMenu(editorPane, e);
 	  }
 	}
